<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="weight"
            type="String" />

        <variable
            name="height"
            type="String" />

        <variable
            name="types"
            type="String" />
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.view.AboutMeDetailedPokemonFragment"
    tools:background="@color/teal_700"
    >

    <LinearLayout
        android:id="@+id/weightLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/weight"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="Weight:" />

        <TextView
            android:id="@+id/tvDetailPokemonWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@{weight}"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="300 KG" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/heightLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/height"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="Height:" />

        <TextView
            android:id="@+id/tvDetailPokemonHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@{height}"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="3.81 M" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/pokemonTypeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/type"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="Type: " />

        <TextView
            android:id="@+id/tvDetailType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"

            android:text="@{types}"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Fire / Flying " />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/typeImagesLayout"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivType1"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/pokemon_type_1"
            android:src="@drawable/battrio_dark_type" />


        <ImageView
            android:id="@+id/ivType2"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/pokemon_type_2"
            android:src="@drawable/battrio_dragon_type" />

    </LinearLayout>

</LinearLayout>

</layout>